--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 <h1 class="display-3 fw-bold text-center mb-4">
                     Create
                     <span class="hover-word">reports
-                        <img class="hover-image img" src="/assets/graph.png" alt="Reports" />
+                        <img class="hover-image img" src="assets/graph.png" alt="Reports" />
                     </span>,
                     <span class="hover-word img">forecasts
                         <img class="hover-image" src="assets/forecast.jpg" alt="Forecasts" />
                     </span>,
                     <span class="hover-word img">dashboards
-                        <img class="hover-image" src="/assets/stats.png" alt="Dashboards" />
+                        <img class="hover-image" src="assets/stats.png" alt="Dashboards" />
                     </span> &amp;
                     <span class="hover-word">consolidations
                         <img class="hover-image" src="assets/console" alt="Consolidations" />
